--- a/src/scss/main/_grid.scss
+++ b/src/scss/main/_grid.scss
@@ -1,14 +1,48 @@
 /*Grid*/
 
 main.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill,minmax(400px,1fr));
-  align-items: flex-start;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  .project{
+    width: 415px;
+    height: fit-content;
+    transition: width 0.6s ease-in-out;
+  }
+  .project:hover{
+    width: calc( 1.2 * 415px);
+    height: fit-content;
+    transition: width 0.3s ease-in-out;
+  }
+  .poster {
+  }
+  .image {
+    overflow: hidden;
+    position: relative;
+    --w: 9;
+    --h: 14;
+    padding-bottom: calc(50%/var(--w)*var(--h));
+    img {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+   }
+  .project-information {
+    display: none;
+  }
 }
 
-main.grid .project {
-  display: flex;
-  flex-wrap: wrap-reverse;
+
+
+main.grid {
+  /*Projects*/
+.project:hover {
+  .project-information {
+   display: none;
+  }
+}
 }
 
 main.grid .project .trigger {
@@ -21,3 +55,6 @@ main.grid .project .trigger {
   display: inline-block;
   white-space: nowrap;
 }
+
+
+
