--- a/src/scss/pages/_footer.scss
+++ b/src/scss/pages/_footer.scss
@@ -1,59 +1,53 @@
-/* FOOTER
-================================================== */
-
 footer {
-  padding: 1rem 0;
-  margin: 0 1rem;
-  width: calc(100vw - 2rem);
-  display: grid;
-  grid-template-columns: 1fr max-content;
-  grid-gap: 10rem 1rem;
-  background-image: linear-gradient(to right, black 16%, rgba(255, 255, 255, 0) 0%);
-  background-position: top;
-  background-size: 6px 1px;
-  background-repeat: repeat-x;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 1em;
+  display: flex;
+  justify-content: space-between;
+  text-transform: uppercase;
 }
-
-footer wrap {
-  padding-top: 1em;
-  grid-column: 2 span !important;
-  justify-self: center;
+.legal,
+.footer-nav,
+.footer-social {
+  display: flex;
+  justify-content: space-between;
+  white-space: nowrap;
+  a {
+    margin-right: 2em;
+  }
+  a:last-child {
+    margin-right: 0;
+  }
 }
-
-footer wrap+div {
-  display: grid;
-}
-
-footer wrap+div br {
+.footer-mobile {
   display: none;
 }
 
-footer form+a {
-  justify-self: flex-end;
-  align-self: flex-start;
+.footer-social {
+  padding-right: 20px;
 }
 
-footer div:last-of-type {
-  justify-self: flex-end;
-  align-self: flex-end;
-}
-
-footer div:last-of-type a span:last-child {
-  display: none;
-}
-
-.desktop footer div:last-of-type a:hover span:first-child {
-  display: none;
-}
-
-.desktop footer div:last-of-type a:hover span:last-child {
-  display: inline-block;
-}
-
-.device footer div:last-of-type a span:first-child::after {
-  content: ' BY';
-}
-
-.device footer div:last-of-type a span:last-child {
-  display: inline-block !important;
+@media only screen and (max-width: 768px) {
+  footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    font-size: 12px;
+  }
+  .footer-nav,
+  .footer-social {
+    display: none;
+  }
+  .footer-mobile {
+    display: flex;
+    grid-column: 1 / 5;
+    flex-direction: column;
+    margin-bottom: 20px;
+    a {
+      border-top: 1px solid var(--foreground-color);
+      span {
+        right: 0px;
+      }
+    }
+  }
 }
