--- a/src/scss/pages/_homePage.scss
+++ b/src/scss/pages/_homePage.scss
@@ -1,4 +1,10 @@
 /* Main */
+.hidden {
+  opacity: 0;
+  position: absolute;
+  pointer-events: none;
+  z-index: -1;
+}
 #preload-homepage {
   display: none;
   z-index: 1001;
