--- a/src/scss/main/_responsive.scss
+++ b/src/scss/main/_responsive.scss
@@ -51,6 +51,11 @@
     main.list .project .wrapper .images {
         grid-template-columns: repeat(14, 1fr);
     }
+
+
+    section.grid {
+      grid-template-columns: repeat(auto-fill,minmax(322px,1fr))
+    }
 }
 
 /*BIG LAPTOP DESKTOP*/
@@ -123,6 +128,10 @@
       padding: 100vh 1rem 0;
     }
 
+    section.grid {
+      padding: 100vh 1rem 0;
+      grid-template-columns: repeat(auto-fill,minmax(322px,1fr))
+    }
 
     main.covers .project {
         width: 100%;
@@ -206,6 +215,10 @@
     main.grid {
         grid-template-columns: 1fr 1fr;
 
+    }
+
+    section.grid {
+      grid-template-columns: 1fr 1fr;
     }
     /*Index List*/
     main.list .project .wrapper .images {
