--- a/src/scss/main/_responsive.scss
+++ b/src/scss/main/_responsive.scss
@@ -187,6 +187,7 @@
     #top {
         position: initial;
         opacity: 1 !important;
+          margin: 1.5rem auto 1rem;
     }
     main.scroll~#top {
         bottom: 3.25rem;
