--- a/src/scss/main/_index.scss
+++ b/src/scss/main/_index.scss
@@ -1,11 +1,8 @@
-
-
 main {
   padding: 20rem 1rem 5rem;
 }
 
 /*Covers*/
-
 main.covers {
   display: grid;
   padding: 25rem 1rem 5rem;
@@ -17,7 +14,7 @@ main.covers {
     height: fit-content;
     height: -moz-fit-content;
     display: grid;
-    grid-gap: .5rem;
+    grid-gap: 0.5rem;
     .trigger {
       display: block;
       grid-area: 1;
@@ -38,20 +35,14 @@ main.covers {
     margin: 0 25%;
     align-self: flex-start;
   }
-
 }
-
-
-
 
 @media (min-width: 1440px) and (max-width: 1680px) {
   main.covers {
     padding: 28rem 1rem 5rem;
-
   }
 
-main {
-  padding: 30rem 1rem 5rem;
-}
-
+  main {
+    padding: 30rem 1rem 5rem;
+  }
 }
